--- a/projects/demo/src/modules/components/editor-new/editor-new.template.html
+++ b/projects/demo/src/modules/components/editor-new/editor-new.template.html
@@ -21,6 +21,15 @@
         >
             <tui-editor-example-1></tui-editor-example-1>
         </tui-doc-example>
+
+        <tui-doc-example
+            id="custom-tool"
+            i18n-heading
+            heading="With custom tool"
+            [content]="example2"
+        >
+            <tui-editor-example-2></tui-editor-example-2>
+        </tui-doc-example>
     </ng-template>
 
     <ng-template pageTab>
